Minor changes to documentation

--- a/documentation/LaTeX dokumentacija/FMindeks.tex
+++ b/documentation/LaTeX dokumentacija/FMindeks.tex
@@ -36,7 +36,7 @@ Na temelju dobivenog niza stvara se OCC tablica koja je u ovoj implementaciji pr
 \caption{Prikaz izgrađenog wavelet stabla za niz \emph{ACCC\$CAGACAAGCTATTGAA}}\label{fmWaveletTree}
 \end{figure}
 
-Ovim dijelom implementacije završeno je stvaranje same strukture FM-indeksa te je još samo potrebno implementirati algoritam koji će obuhvatiti prebrojavanje pojavljivanja nekog podniza u nizu nad kojim je napravljen FM-indeks, tj. \emph{Count} dio implementacije projekta \textbf{\emph{(? malo čudno zvuči).}}
+Ovim dijelom implementacije završeno je stvaranje same strukture FM-indeksa te je još samo potrebno implementirati algoritam koji će obuhvatiti prebrojavanje pojavljivanja nekog podniza u nizu nad kojim je napravljen FM-indeks, tj. \emph{Count} dio implementacije projekta.
 Za završni dio implementacije korišten je algoritam pretraživanja unatrag (engl. \emph{backward search algorithm}). Algoritam je implementiran kao i u originalnoj implementaciji FM-indeksa \cite{fm1}, prema sljedećem pseudokodu:
 
 
