--- a/documentation/LaTeX dokumentacija/literatura.bib
+++ b/documentation/LaTeX dokumentacija/literatura.bib
@@ -8,7 +8,6 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
-
 @article{bwt1,
 	Author = {Michael Burrows; David J. Wheeler },
 	Date-Added = {2013-12-30 02:47:34 +0000},
@@ -94,12 +93,13 @@
 	Date-Added = {2014-01-11 04:04:49 +0000},
 	Date-Modified = {2014-01-11 04:05:11 +0000},
 	Journal = {Freie Universitat Berlin - Bioinformatik, Master Thesis},
-	Title = {A Wavelet Tree Based FM-Index for Biological Sequences in SeqAn},
+	Title = {A Wavelet Tree Based {FM}-Index for Biological Sequences in {SeqAn}},
 	Year = {2012}}
 
 @MISC{corpus,
-author = {Paolo Ferragina; Giovanni Manzini},
-month = {December},
-year = {2013},
-url = {http://pizzachili.dcc.uchile.cl/texts.html}
+Author = {Paolo Ferragina; Giovanni Manzini},
+Month = {December},
+Year = {2013},
+Title = {Pizza\&{C}hili {C}orpus, {C}ompressed Indexes and their Testbeds},
+howpublished={\url{http://pizzachili.dcc.uchile.cl/texts.html}},
 }
