dodan zaključak u dokumentaciju

--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -52,6 +52,9 @@
 \chapter{Testiranja}
 \input{./testiranja.tex}
 
+\chapter{Zaključak}
+\input{./zakljucak.tex}
+
 \chapter{Literatura}
 \bibliography{literatura}
 %\bibliographystyle{fer}
